# dependencies

./: CMakeLists.txt  DependenciesConfig.cmake  README.md  build  build.py  cmake-dependencies-CMakeLists.txt  cmake-dependencies.cmake  dependencies.cmake  install.ps1  install.py  python-module-build.py  python-module-install.py  setup  version.py
dependencies/: __init__.py  __version__.py
